--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ejs": "^3.1.6",
-    "body-parser": "^1.19.0"
+    "ejs": "^3.1.6"
   },
   "engines": {
     "node": "14.x"
